# slavey

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  NOTICE  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  (+2 more)
docs/: activity-contract.md  architecture.md  engineering-rules.md  pet-companion-system.md  release.md  terminal-evidence-flow.md
e2e/: app-shell.ci.spec.ts  app-shell.smoke.spec.ts  app-shell.visual.spec.ts  helpers.ts
scripts/: check-production-bundle.mjs
src/: App.tsx  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  activity.rs  activity_contract.rs  approvals.rs  codex_app_server.rs  diagnostics.rs  employees.rs  events.rs  fs.rs  git.rs  lib.rs  main.rs  persistence.rs  processes.rs  terminal.rs  workspace.rs
src-tauri/src/actions/: persistence.rs  runner.rs  transitions.rs
src-tauri/src/diagnostics/: redaction.rs
src-tauri/src/fs/: metadata.rs  operations.rs  path_safety.rs  search.rs
src-tauri/src/git/: diff.rs  handoff.rs  parsing.rs  review.rs  runner.rs  worktree.rs
src-tauri/src/terminal/: agent_runtime.rs  codex_notify.rs  codex_status.rs  control_markers.rs  evidence.rs  profile.rs  session_fixture_tests.rs  session_store.rs  turn_resolver.rs  uploads.rs
(+145 files in other folders)
