[package]
name = "slavey"
version = "0.1.0"
description = "Terminal and lightweight IDE for managing AI coding-agent employees"
authors = ["Slavey"]
edition = "2021"

[lib]
name = "slavey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "slavey"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
parking_lot = "0.12"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4", "serde"] }

